# LearnOpenGL

./: .gitignore
Source/2_5_LightCasters/: 5.4.light_casters.fs  5.4.light_casters.vs  CMakeLists.txt  Main.cpp
Source/2_6_MultipleLights/: CMakeLists.txt  Main.cpp
Source/2_Basic_Lighting/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  CMakeLists.txt  Main.cpp
Source/2_Lighting/: 1.colors.fs  CMakeLists.txt  Main.cpp
Source/3_3_Model/: 6.multiple_lights.fs  CMakeLists.txt  Main.cpp
Source/3_Materials/: 3.1.materials.fs  3.1.materials.vs  CMakeLists.txt  Main.cpp
Source/4_LightingMaps/: 4.2.lighting_maps.fs  CMakeLists.txt  Main.cpp
Source/Camera/: CMakeLists.txt  Main.cpp
Source/CoordinateSystems/: CMakeLists.txt  Main.cpp
Source/GettingStarted/: .gitignore  CMakeLists.txt  Main.cpp  glad.c
Source/HelloTriangle/: CMakeLists.txt  Main.cpp
Source/Textures/: CMakeLists.txt  Main.cpp
Source/Transformations/: CMakeLists.txt  Main.cpp
ThirdLibrary/Depends/include/glad/: glad.h
ThirdLibrary/Depends/include/learnopengl/: camera.h  filesystem.h  shader_s.h
ThirdLibrary/Depends/libs/glfw/Debug/: glfw3.lib
resources/shaders/: 4.2.texture.fs  5.1.transform.vs  6.3.coordinate_systems.fs  7.4.camera.vs
